# open-poke

./: .gitignore  README.md
poke-backend/: .env.example  README.md  cli.py  dump.rdb  main.py  pyproject.toml
poke-backend/server/: agent.py  api.py  connection.py  constants.py  message_processor.py  models.py  tools.py
poke-frontend/: index.html  package-lock.json  package.json
poke-frontend/src/: App.tsx  api.ts  index.css  types.ts
poke-frontend/src/components/: ChatBubble.tsx  ConnectionSetup.tsx  MessageInput.tsx  TypingIndicator.tsx
